--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,3 @@
-# Our .tmux.conf file
-
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
 unbind C-b
@@ -40,9 +38,10 @@ bind -r L resize-pane -R 5
 
 # mouse support - set to on if you want to use the mouse
 set -g mode-mouse on
-#set -g mouse-select-pane off
-#set -g mouse-resize-pane off
-#set -g mouse-select-window off
+set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+set -g mouse-select-window on
+
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
@@ -76,21 +75,29 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 
-# Status line left side
-#set -g status-left-length 40 
-set -g status-left "#[fg=green]#S #[fg=yellow]#I:#[fg=cyan]#P"
-
+# Status line
 set -g status-utf8 on
-
-# Status line right side
-# 15% | 28 Nov 18:15
-set -g status-right "#[fg=cyan]#h %R"
-
-# Update the status bar every sixty seconds
 set -g status-interval 60
-
-# Center the window list
 set -g status-justify centre
 
-# enable vi keys.
+#set -g status-left-length 40 
+set -g status-left "#[fg=green]#S #[fg=yellow]#I:#[fg=cyan]#P"
+set -g status-right "#[fg=cyan]#h %R"
+
 setw -g mode-keys vi
+
+# Magic moves
+
+bind m run "if [[ `tmux show-option -w | grep mode-mouse.*on` ]]; then toggle=off; else toggle=on; fi; tmux display-message \"mouse tmux: \$toggle\"; tmux set-option -w mode-mouse \$toggle &> /dev/null; for cmd in mouse-select-pane mouse-resize-pane mouse-select-window; do tmux set-option -g \$cmd \$toggle &> /dev/null; done;"
+
+unbind +
+bind + \
+  new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
+  swap-pane -s tmux-zoom.0 \;\
+  select-window -t tmux-zoom
+    
+unbind -
+bind - \
+  last-window \;\
+  swap-pane -s tmux-zoom.0 \;\
+  kill-window -t tmux-zoom
