--- a/tmux.conf
+++ b/tmux.conf
@@ -37,10 +37,10 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # mouse support - set to on if you want to use the mouse
-set -g mode-mouse on
-set -g mouse-select-pane on
+#set -g mode-mouse on
+#set -g mouse-select-pane on
 #set -g mouse-resize-pane on
-set -g mouse-select-window on
+#set -g mouse-select-window on
 
 
 # Set the default terminal mode to 256color mode
@@ -76,7 +76,7 @@ set -g message-bg black
 set -g message-attr bright
 
 # Status line
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-interval 60
 set -g status-justify centre
 
