--- a/tmux.conf
+++ b/tmux.conf
@@ -37,11 +37,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # mouse support - set to on if you want to use the mouse
-#set -g mode-mouse on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse-select-window on
-
+set -g mouse on
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
@@ -65,10 +61,12 @@ setw -g window-status-current-bg red
 setw -g window-status-current-attr bright
 
 # pane colors
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+#set -g pane-border-fg colour8
+#set -g pane-active-border-fg red
+#set -g pane-border-fg green
+#set -g pane-border-bg black
+#set -g pane-active-border-fg white
+#set -g pane-active-border-bg yellow
 
 # Command / message line
 set -g message-fg white
@@ -88,16 +86,5 @@ setw -g mode-keys vi
 
 # Magic moves
 
-bind m run "if [[ `tmux show-option -w | grep mode-mouse.*on` ]]; then toggle=off; else toggle=on; fi; tmux display-message \"mouse tmux: \$toggle\"; tmux set-option -w mode-mouse \$toggle &> /dev/null; for cmd in mouse-select-pane mouse-resize-pane mouse-select-window; do tmux set-option -g \$cmd \$toggle &> /dev/null; done;"
+bind m run "if [[ `tmux show-option -w | grep mouse.*on` ]]; then toggle=off; else toggle=on; fi; tmux display-message \"mouse tmux: \$toggle\"; tmux set-option -w mouse \$toggle &> /dev/null;"
 
-unbind +
-bind + \
-  new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
-  swap-pane -s tmux-zoom.0 \;\
-  select-window -t tmux-zoom
-    
-unbind -
-bind - \
-  last-window \;\
-  swap-pane -s tmux-zoom.0 \;\
-  kill-window -t tmux-zoom
