Fix Sierra copy-paste

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,48 @@
+# vim: foldmethod=marker: ft=sh
+
+################ Set options (set) ############### {{{
+set -g default-shell $SHELL
+setw -g mode-keys vi
+
+#setting the delay between prefix and command
+set -s escape-time 1
+
+# Set the base index for windows & panes to 1 instead of 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+
+
+if-shell "tmux -V | grep -q 2." "\
+	set -g mouse on \
+"
+
+if-shell "tmux -V | grep -q 1." "\
+	set -g mode-mouse on; \
+	set -g mouse-resize-pane on; \
+	set -g mouse-select-pane on; \
+	set -g mouse-select-window on \
+"
+
+if-shell "uname | grep -q Darwin" "\
+	set -g default-command 'reattach-to-user-namespace -l ${SHELL}' \
+"
+
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
+
+if-shell "uname | grep -q Darwin" "\
+	bind -t vi-copy y copy-pipe 'reattach-to-user-namespace pbcopy'; \
+	bind -t vi-copy MouseDragEnd1Pane copy-pipe 'reattach-to-user-namespace pbcopy'; \
+	bind -n WheelUpPane if-shell -Ft = '#{mouse_any_flag}' \
+		'send-keys -M' \
+		\"if-shell -Ft = '#{pane_in_mode}' \
+			'send-keys -M' 'select-pane -t =; copy-mode -e; send-keys -M'\"; \
+	bind -n WheelDownPane select-pane -t =\\; send-keys -M \
+"
+
+
+
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
 unbind C-b
@@ -6,12 +51,11 @@ unbind C-b
 bind C-a send-prefix
 bind a send-prefix
 
-#setting the delay between prefix and command
-set -s escape-time 1
+# }}}
 
-# Set the base index for windows & panes to 1 instead of 0
-set -g base-index 1
-setw -g pane-base-index 1
+
+
+
 
 # Reload the file with Prefix R
 bind R source-file ~/.tmux.conf \; display "Reloaded!"
@@ -82,7 +126,6 @@ set -g status-justify centre
 set -g status-left "#[fg=green]#S #[fg=yellow]#I:#[fg=cyan]#P"
 set -g status-right "#[fg=cyan]#h %R"
 
-setw -g mode-keys vi
 
 # Magic moves
 
