--- a/.tmux.conf
+++ b/.tmux.conf
@@ -124,7 +124,7 @@ set -g status-justify centre
 
 #set -g status-left-length 40 
 set -g status-left "#[fg=green]#S #[fg=yellow]#I:#[fg=cyan]#P"
-set -g status-right "#[fg=cyan]#h %R"
+set -g status-right "#[fg=cyan]#h #(battery -t) %R"
 
 
 # Magic moves
