--- a/.gitconfig
+++ b/.gitconfig
@@ -75,6 +75,10 @@
   unpushed = "log --branches --not --remotes"
 
 
+[merge]
+  tool = vimdiff
+  conflictstyle = diff3
+
 [push]
   default = simple #matching
   followTags = true
