--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,5 @@
 # vim: foldmethod=marker: ft=sh
 
-################ Set options (set) ############### {{{
 set -g default-shell $SHELL
 setw -g mode-keys vi
 
@@ -10,7 +9,6 @@ set -s escape-time 1
 # Set the base index for windows & panes to 1 instead of 0
 set -g base-index 1
 setw -g pane-base-index 1
-
 
 
 if-shell "tmux -V | grep -q 2." "\
@@ -24,9 +22,9 @@ if-shell "tmux -V | grep -q 1." "\
 	set -g mouse-select-window on \
 "
 
-if-shell "uname | grep -q Darwin" "\
-	set -g default-command 'reattach-to-user-namespace -l ${SHELL}' \
-"
+#if-shell "uname | grep -q Darwin" "\
+#	set -g default-command 'reattach-to-user-namespace -l ${SHELL}' \
+#"
 
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
@@ -50,11 +48,6 @@ unbind C-b
 # Ensure that we can send Ctrl-A to other apps
 bind C-a send-prefix
 bind a send-prefix
-
-# }}}
-
-
-
 
 
 # Reload the file with Prefix R
@@ -80,8 +73,6 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# mouse support - set to on if you want to use the mouse
-set -g mouse on
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
