--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,18 +26,18 @@ if-shell "tmux -V | grep -q 1." "\
 #	set -g default-command 'reattach-to-user-namespace -l ${SHELL}' \
 #"
 
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-selection
 
-if-shell "uname | grep -q Darwin" "\
-	bind -t vi-copy y copy-pipe 'reattach-to-user-namespace pbcopy'; \
-	bind -t vi-copy MouseDragEnd1Pane copy-pipe 'reattach-to-user-namespace pbcopy'; \
-	bind -n WheelUpPane if-shell -Ft = '#{mouse_any_flag}' \
-		'send-keys -M' \
-		\"if-shell -Ft = '#{pane_in_mode}' \
-			'send-keys -M' 'select-pane -t =; copy-mode -e; send-keys -M'\"; \
-	bind -n WheelDownPane select-pane -t =\\; send-keys -M \
-"
+#if-shell "uname | grep -q Darwin" "\
+#	bind -t vi-copy y copy-pipe 'reattach-to-user-namespace pbcopy'; \
+#	bind -t vi-copy MouseDragEnd1Pane copy-pipe 'reattach-to-user-namespace pbcopy'; \
+#	bind -n WheelUpPane if-shell -Ft = '#{mouse_any_flag}' \
+#		'send-keys -M' \
+#		\"if-shell -Ft = '#{pane_in_mode}' \
+#			'send-keys -M' 'select-pane -t =; copy-mode -e; send-keys -M'\"; \
+#	bind -n WheelDownPane select-pane -t =\\; send-keys -M \
+#"
 
 
 
