--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,22 +22,24 @@ if-shell "tmux -V | grep -q 1." "\
 	set -g mouse-select-window on \
 "
 
-#if-shell "uname | grep -q Darwin" "\
-#	set -g default-command 'reattach-to-user-namespace -l ${SHELL}' \
-#"
-
 #bind-key -t vi-copy v begin-selection
 #bind-key -t vi-copy y copy-selection
 
-#if-shell "uname | grep -q Darwin" "\
-#	bind -t vi-copy y copy-pipe 'reattach-to-user-namespace pbcopy'; \
-#	bind -t vi-copy MouseDragEnd1Pane copy-pipe 'reattach-to-user-namespace pbcopy'; \
-#	bind -n WheelUpPane if-shell -Ft = '#{mouse_any_flag}' \
-#		'send-keys -M' \
-#		\"if-shell -Ft = '#{pane_in_mode}' \
-#			'send-keys -M' 'select-pane -t =; copy-mode -e; send-keys -M'\"; \
-#	bind -n WheelDownPane select-pane -t =\\; send-keys -M \
-#"
+if-shell "type reattach-to-user-namespace >/dev/null 2>/dev/null" "\
+	set -g default-command 'reattach-to-user-namespace -l ${SHELL}'; \
+	bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'; \
+	bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'; \
+"
+
+if-shell "uname | grep -q Darwin" "\
+  bind-key -T copy-mode-vi WheelUpPane send -X scroll-up; \
+  bind-key -T copy-mode-vi WheelDownPane send -X scroll-down; \
+	bind -n WheelUpPane if-shell -Ft = '#{mouse_any_flag}' \
+		'send-keys -M' \
+		\"if-shell -Ft = '#{pane_in_mode}' \
+			'send-keys -M' 'select-pane -t =; copy-mode -e; send-keys -M'\"; \
+	bind -n WheelDownPane select-pane -t =\\; send-keys -M \
+"
 
 
 
